package vn.qlkt.award;

import java.util.Date;
import java.util.Map;

public class KhenThuongHCCSVV {
    private String id;
    private String quan_nhan_id;
    private HangHCCSVV danh_hieu;
    private Integer nam;
    private Integer thang;
    private String cap_bac;
    private String chuc_vu;
    private String ghi_chu;
    private String so_quyet_dinh;
    private Map thoi_gian;
    private Date createdAt;
    private Date updatedAt;
}
