package vn.qlkt.unit;

import java.math.BigDecimal;
import java.util.Date;

public class ChucVu {
    private String id;
    private String co_quan_don_vi_id;
    private CoQuanDonVi coQuanDonVi;
    private String don_vi_truc_thuoc_id;
    private DonViTrucThuoc donViTrucThuoc;
    private String ten_chuc_vu;
    private Boolean is_manager;
    private BigDecimal he_so_chuc_vu;
    private Date createdAt;
    private Date updatedAt;
}
