package vn.qlkt.unit;

import java.util.Date;

public class DonViTrucThuoc {
    private String id;
    private String co_quan_don_vi_id;
    private CoQuanDonVi coQuanDonVi;
    private String ma_don_vi;
    private String ten_don_vi;
    private Integer so_luong;
    private Date createdAt;
    private Date updatedAt;
}
