package vn.qlkt.unit;

import java.util.Date;
import vn.qlkt.personnel.QuanNhan;

public class LichSuChucVu {
    private String id;
    private String quan_nhan_id;
    private QuanNhan quanNhan;
    private String chuc_vu_id;
    private ChucVu chucVu;
    private Float he_so_chuc_vu;
    private Date ngay_bat_dau;
    private Date ngay_ket_thuc;
    private Integer so_thang;
    private Date createdAt;
    private Date updatedAt;
}
